--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -20,13 +20,25 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
         <% for(let url in urls) { %>
           <tr>
-            <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            <td><a href="/urls/<%= url %>"><%= url %></a></td>
+            <td><%= urls[url]["longURL"] %></td>
+            <td>
+              <a href="/urls/<%= url %>">
+                <input type="Submit" value="Edit" class="btn btn-edit">
+              </a>
+            </td>
+            <td>
+              <form method="POST" action="/urls/<%= url %>/delete">
+                <input type="Submit" value="Delete" class="btn btn-danger">
+              </form>
+            </td>
           </tr>
         <% } %>
       </tbody>
