Created login and logout post request using cookies

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -6,7 +6,6 @@
   <title>URL - TinyApp Example</title>
 </head>
 
-
 <body>
   <header>
     <%- include('partials/_header'); %>
@@ -16,6 +15,13 @@
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+        <form  method ="POST" action="/urls/<%= shortURL %>">
+          <h5>Edit</h5>
+          <p>New URL:
+            <input type="text" name="newLongURL">
+            <button type="submit" class="btn btn-primary" value="Submit">Submit</button>
+          </p>
+        </form>
       </div>
     <div class="card-footer text-muted"></div>
   </div>
