--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,6 +8,17 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <% if (!username) { %>
+          <form method="POST" action="/login">
+            <input name="username" type="text">
+            <button type="submit" class="btn btn-primary" value="Login">Login</button>
+          </form>
+        <% } else { %>
+          <form method="POST" action="/logout">
+            <button type="submit" class="btn btn-primary" value="Logout">Logout</button>
+          </form>
+          <p class="nav-item">Logged in as <%= username %></p>
+        <% } %>
       </div>
     </div>
   </nav>
