--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -13,6 +13,13 @@
     <%- include('partials/_header'); %>
   </header>
   <main style="margin: 1em;">
+    <% if (!user) { %>
+      <div class="card text-center">
+        <div class="card-body">
+          <h5 class="card-title">Please login or register</h5>
+        </div>
+      </div>
+    <% } else { %>
     <h3>My URLs</h3>
     <table class="table">
       <thead>
@@ -42,6 +49,7 @@
         <% } %>
       </tbody>
     </table>
+    <% } %>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
