--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -37,7 +37,7 @@
             <td><%= urls[url]["longURL"] %></td>
             <td>
               <a href="/urls/<%= url %>">
-                <input type="Submit" value="Edit" class="btn btn-edit">
+                <input type="Submit" value="Edit" class="btn btn-secondary">
               </a>
             </td>
             <td>
